--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "slugify": "^1.6.6"
+    "react-toastify": "^10.0.6",
+    "slugify": "^1.6.6",
+    "sonner": "^1.7.1"
   },
   "devDependencies": {
     "@types/node": "^20",
