--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-to-print": "^3.0.2",
     "react-toastify": "^10.0.6",
     "slugify": "^1.6.6",
     "sonner": "^1.7.1"
